--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@motionone/vue": "^10.16.4",
     "@nuxtjs/supabase": "^1.5.1",
     "@pinia/nuxt": "^0.11.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@vueuse/motion": "^3.0.3",
+    "dotenv": "^16.5.0",
     "nodemon": "^3.1.10",
     "nuxt": "^3.17.3",
+    "supabase": "^2.22.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
     "autoprefixer": "^10.4.21",
+    "nuxt-resend": "^0.0.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
