--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt": "^3.17.3",
     "supabase": "^2.22.12",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-scroll-animate": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
